# wazuh-agent-1

./: .gitignore  .gitmodules  buffer.h  common.cmake
boost_example/: CMakeLists.txt  server.cpp
curl/: CMakeLists.txt  server.cpp
grpc_example/: client.cpp
grpc_rt/: CMakeLists.txt  client.cpp
poc/boost_example/: client.cpp
poc/command_manager/: CMakeLists.txt  command_executor.cpp  command_executor.hpp  command_receiver.cpp  command_receiver.hpp  main.cpp
poc/commander/: commander.cpp
poc/curl/: CMakeLists.txt  README.md  agent.hpp  asio_thread_manager.hpp  benchmark_client.cpp  benchmark_event_queue_monitor.cpp  client.cpp  client.hpp  client_main.cpp  command_dispatcher.hpp  db_wrapper.hpp  defs.hpp  event_queue_monitor.hpp  event_simulator.py  events.hpp  listener.hpp  logger.hpp  requests.hpp  server.cpp  session.hpp  std_thread_manager.hpp  task.hpp  thread_manager_wrapper.hpp  token.hpp  unix_socket_command_sender.py  unix_socket_handler.hpp  vcpkg.json
poc/curl/cppcoro/: auto_reset_event.hpp  spin_wait.cpp  static_thread_pool.cpp
poc/curl/db/: dummy_wrapper.hpp  rocksdb_wrapper.hpp  sqlite_wrapper.hpp
poc/curl/server/: listener.hpp  session.hpp
poc/grpc_example/: CMakeLists.txt  example.proto  server.cpp
poc/grpc_rt/: realtime.proto  server.cpp
poc/uml/: agent_architecture.puml  register.puml  stateless.puml
src/: CMakeLists.txt  vcpkg.json
src/agent/: CMakeLists.txt
src/agent/command_handler/: CMakeLists.txt
src/agent/command_handler/include/: command_handler.hpp
src/agent/command_handler/src/: command_handler.cpp
src/agent/command_handler/tests/: CMakeLists.txt  command_handler_test.cpp
src/agent/command_store/: CMakeLists.txt
src/agent/command_store/include/: command.hpp  command_store.hpp
src/agent/command_store/src/: command_store.cpp
src/agent/command_store/tests/: CMakeLists.txt  command_store_test.cpp
src/agent/communicator/src/: communicator.cpp
src/agent/configuration_parser/src/: configuration_parser.cpp
src/agent/include/: agent.hpp  process_options.hpp  register.hpp  unix_daemon.hpp
src/agent/src/: agent.cpp  message_queue_utils.cpp  message_queue_utils.hpp  process_options.cpp  register.cpp  unix_daemon.cpp  unix_main.cpp  windows_main.cpp  windows_service.cpp
src/agent/tests/: register_test.cpp
src/commander/: commander.cpp
src/common/dbsync/: CMakeLists.txt  vcpkg.json
src/modules/: moduleWrapper.hpp
src/modules/include/: moduleManager.hpp  moduleWrapper.hpp
src/modules/inventory/src/: inventory.cpp
src/modules/upgrade/src/: wm_agent_upgrade.c
websocket/: CMakeLists.txt  client.cpp  server.cpp
